Adds links, updates descriptions and tags; now it should work.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </main>
 
         <footer class="footer">
-            <p>© 2025 Bradwave Labs</p>
+            <p>Matteo Bramardi</p>
         </footer>
     </div>
 
